2004-12-24  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxPattern.java (allocVars): New helper method.
	* kawa/lang/Translator.java (matchArray): New field, moved
	here from syntax_case.work.
	* kawa/standard/syntax_case.java: Fix bugs when nested syntax-cases.

	* kawa/standard/Scheme.java; Define "include", "syntax-object->datum",
	"datum->syntax-object", "with-syntax".

2004-12-23  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (setLineOf): Do nothing if QuoteExp.

2004-12-22  Per Bothner  <per@bothner.com>

	* Makefile.am: Partially convert pre-processor syntax, for JAXP
	version selection: use #ifdef, #ifndef, #else.  Updates rules.
	* build.xml: Update select-java1, select-java2, select-java5.

	* kawa/lang/SyntaxTemplate.java: Fix comment syntax so it doesn't
	break under 'make select-java1' -> 'make select-java2'.
	* kawa/lang/Translator.java (syntaxError): Moved to Compilation.
	* kawa/standard/Scheme.java: Update classes for 'make-element' and
	'make-attribute'.

2004-12-20  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite): "Filter" through Quote.quote.
	* kawa/lang/Quote.java: Merge with quasiquote.java to handle both
	quasiquote and regular quote. Check for cycles.
	* kawa/standard.Scheme (initScheme): Update 'quote' and 'quasiquote'.

	* kawa/lang/Translator.java (selfEvauatingSymbol): New method.
	(matches, getBinding, rewrite_pair, rewrite): Use new method.
	* kawa/standard/quasiquote.java: Remove no-longer-used class.
	* kawa/standard/Makefile.am: Update accordingly.

2004-12-19  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxTemplate.java: New handling of ellipsis,
	needed to correctly process forms like (template ... ...).
	(BUILD_REPEAT): Remove constant.
	(BUILD_DOTS): New constant.
	(print_template_program, convert_template): Update accordingly.
	(execute_car):  Gnerealize to executeToList.  Handle BUILD_DOTS.

	* kawa/lang/SyntaxTemplate.java (convert_template):  Extra isVector