@@ -1,5 +1,7 @@
 2004-12-24  Per Bothner  <per@bothner.com>
 
+	* kawa/lang/SyntaxForm.java (makeWithTemplate): New static function.
+
 	* kawa/lang/SyntaxPattern.java (allocVars): New helper method.
 	* kawa/lang/Translator.java (matchArray): New field, moved
 	here from syntax_case.work.
